...
    <string name="all_property_status">All Status</string>
    <string name="no_property_found">No Property Found</string>
    <string name="currency">Currency</string>
    <string name="default_currency">Default Currency</string>
    <string name="choose_default_currency">Choose default currency</string>
    <string name="settings">Settings</string>
    <string name="update_location">Update Location</string>
    <string name="search_location_hint">Search by address, street, city, postal code or country</string>
    <string name="search_result">Search Results</string>
    <string name="create_location">Create Location</string>
</resources>

